--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.github.iammert:MaterialIntroView:1.5.2'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'com.github.sembozdemir:ViewPagerArrowIndicator:1.0.0'
     compile 'com.github.tittojose:timerangepicker-library:0.2'
-    compile 'com.google.android.gms:play-services-location:6.5.87'
+    compile 'com.google.android.gms:play-services-location:8.4.0'
 }
