--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "nl.mranderson.sittingapp"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 19
-        versionName "1.9"
+        versionCode 20
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -26,8 +26,11 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.github.iammert:MaterialIntroView:1.5.2'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-ads:9.0.0'
     compile 'com.github.sembozdemir:ViewPagerArrowIndicator:1.0.0'
     compile 'com.github.tittojose:timerangepicker-library:0.2'
-    compile 'com.google.android.gms:play-services-location:8.4.0'
+    compile 'com.google.android.gms:play-services-location:9.0.0'
+    compile 'com.google.firebase:firebase-core:9.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
