--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".service.PushActionActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
 
         <service android:name=".service.TimerService" />
         <service android:name=".service.ActivityRecognitionIntentService" />
