--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 24
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "nl.mranderson.sittingapp"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 35
-        versionName "3.5"
+        targetSdkVersion 24
+        versionCode 36
+        versionName "3.6"
     }
     buildTypes {
         release {
@@ -23,16 +23,17 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:support-v4:24.0.0'
-    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:design:24.2.1'
     compile 'com.github.iammert:MaterialIntroView:1.5.2'
-    compile 'com.google.android.gms:play-services-ads:9.0.0'
-    compile 'com.google.android.gms:play-services-location:9.0.0'
+    compile 'com.google.android.gms:play-services-ads:9.6.1'
+    compile 'com.google.android.gms:play-services-location:9.6.1'
     compile 'com.google.firebase:firebase-core:9.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'io.github.kobakei:ratethisapp:1.0.5'
     compile 'com.jakewharton:butterknife:8.0.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
 
