--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
     compileSdkVersion 24
@@ -9,8 +10,8 @@ android {
         applicationId "nl.mranderson.sittingapp"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 36
-        versionName "3.6"
+        versionCode 37
+        versionName "3.7"
     }
     buildTypes {
         release {
@@ -29,12 +30,13 @@ dependencies {
     compile 'com.github.iammert:MaterialIntroView:1.5.2'
     compile 'com.google.android.gms:play-services-ads:9.6.1'
     compile 'com.google.android.gms:play-services-location:9.6.1'
-    compile 'com.google.firebase:firebase-core:9.0.0'
+    compile 'com.google.firebase:firebase-core:10.2.6'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'io.github.kobakei:ratethisapp:1.0.5'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    compile 'com.google.firebase:firebase-perf:10.2.6'
 }
 
 apply plugin: 'com.google.gms.google-services'
