--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '25.0.2'
 
     packagingOptions {
@@ -28,10 +28,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:support-v4:26.+'
-    compile 'com.android.support:design:26.+'
-    compile "com.android.support:support-compat:26.+"
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.google.android.gms:play-services-ads:11.0.0'
     compile 'com.google.android.gms:play-services-fitness:11.0.0'
     compile 'com.google.android.gms:play-services-location:11.0.0'
@@ -39,9 +38,10 @@ dependencies {
     compile 'io.github.kobakei:ratethisapp:1.0.5'
     compile 'com.github.markushi:circlebutton:1.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:design:26.+'
+    implementation 'com.android.support:design:26.0.0-alpha1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-vector-drawable:26.+'
+    implementation 'com.android.support:support-vector-drawable:26.0.0-alpha1'
+    compile "com.android.support:support-compat:26.0.0-alpha1"
 }
 
 apply plugin: 'com.google.gms.google-services'
