--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity
             android:name=".timer.stop.TimerActivity"
-            android:label="@string/rate_the_app"
+            android:label="@string/title_timer"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
@@ -31,7 +31,6 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".NavigationActivity"
-            android:label="@string/title_activity_navigation"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
 
